Removed overflow:hidden from circle player to prevent clipping

--- a/ad/sass/partials/_circleplayer.scss
+++ b/ad/sass/partials/_circleplayer.scss
@@ -2,7 +2,6 @@
     background: url(#{$images}playerback.jpg) top no-repeat;
     width: 140px;
     height: 190px;
-    overflow: hidden;
     float: left;
     margin: 10px;
     span{
